# prefect_101

./: .gitignore  .initialized  README.md  init.sh  pyproject.toml
outputs/: cluster_centroids_k4_d32_seed7.npy  cluster_k4_d32_seed7.json  matrix_size300_seed42.json  similarity_n5000_d64_seed99.json  similarity_topk_n5000_d64_seed99.npy
src/practice/: cli.py
src/practice/tasks/: cluster.py  matrix.py  similarity.py
src/prefect_practice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
