[project]
name = "prefect-practice"
version = "0.1.0"
description = "A practice repo for testing the full Prefect pipeline"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
practice = "practice.cli:app"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
